--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2127,7 +2127,7 @@ apiproxy:
       targetUrl: "https://lab.api.mijniconnect.nl/iconnect/apikvk/vesprof/v1/v1/vestigingsprofielen"
 
 ita:
-  enabled: false
+  enabled: true
   replicaCount: 1
   imagePullSecrets: []
   nodeSelector: {}
