--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2181,7 +2181,7 @@ ita:
   web:
     image:
       repository: "ghcr.io/interne-taak-afhandeling/internetaakafhandeling.web"
-      tag: "latest"
+      tag: "1.0.0"
       pullPolicy: Always
 
     service:
