--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -73,9 +73,9 @@ dependencies:
     repository: "@zgw-office-addin"
     version: 0.0.31
     condition: zgw-office-addin.enabled
-  - name: internetaakafhandeling.web
+  - name: internetaakafhandeling
     alias: ita
-    repository: "oci://ghcr.io/interne-taak-afhandeling/internetaakafhandeling"
+    repository: "oci://ghcr.io/interne-taak-afhandeling"
     version: 1.0.0
     condition: ita.enabled
 
