Openinwoner: image elastic remove

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -1652,14 +1652,12 @@ openinwoner:
     data:
       resources:
         requests:
-          cpu: 100mF
+          cpu: 100m
     coordinating:
       resources:
         requests:
           cpu: 100m
           memory: 512Mi
-    image:
-      tag: "9.0.3-debian-12-r1"
 
 kisselastic:
   kibanaDomain: kiss-kb-http.podiumd.svc.cluster.local:5601
