ita 1.0.1 with overrides

--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2134,12 +2134,8 @@ ita:
   nodeSelector: {}
   affinity: {}
   tolerations: []
-  nameOverride: "ita"
+  nameOverride: ""
   fullnameOverride: "ita"
-  configMapName: "ita-config"
-  secretName: "ita-secret"
-  serviceName: "ita-service"
-  deploymentName: "ita-deployment"
 
   postgresql:
     enabled: false
