--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2207,11 +2207,20 @@ ita:
       webFontSources: []
 
   ingress:
-    enabled: false
-    annotations: {}
-    className: ""
-    hosts: []
-    tls: []
+    enabled: true
+    annotations:
+      nginx.ingress.kubernetes.io/ssl-redirect: "true"
+      cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    className: "nginx"
+    hosts:
+      - host: ontw-ita.dimpact.icatt.nl
+        paths:
+          - path: /
+            pathType: Prefix
+    tls:
+      - secretName: ita-tls-secret
+        hosts:
+          - ontw-ita.dimpact.icatt.nl
 
 serviceAccount:
   create: true
