--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2207,20 +2207,7 @@ ita:
       webFontSources: []
 
   ingress:
-    enabled: true
-    annotations:
-      nginx.ingress.kubernetes.io/ssl-redirect: "true"
-      cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    className: "nginx"
-    hosts:
-      - host: ontw-ita.dimpact.icatt.nl
-        paths:
-          - path: /
-            pathType: Prefix
-    tls:
-      - secretName: ita-tls-secret
-        hosts:
-          - ontw-ita.dimpact.icatt.nl
+    enabled: false
 
 serviceAccount:
   create: true
