--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -485,7 +485,7 @@ openzaak:
   persistentVolume:
     volumeAttributeShareName: openzaak
   image:
-    tag: "1.21.2"
+    tag: "1.24.0"
   resources:
     requests:
       cpu: 100m
@@ -710,7 +710,7 @@ opennotificaties:
   persistentVolume:
     volumeAttributeShareName: opennotificaties
   image:
-    tag: "1.10.0"
+    tag: "1.12.0"
   resources:
     requests:
       cpu: 100m
@@ -868,7 +868,7 @@ objecten:
   persistentVolume:
     volumeAttributeShareName: objecten
   image:
-    tag: "3.1.3"
+    tag: "3.1.4"
   resources:
     requests:
       cpu: 100m
@@ -895,6 +895,11 @@ objecten:
         requests:
           cpu: 10m
           memory: 64Mi
+    architecture: standalone
+    sentinel:
+      enabled: false
+      masterService:
+        enabled: false
 
 objecttypen:
   configuration:
@@ -981,7 +986,7 @@ objecttypen:
       useTLS: true
     disable2fa: false
   image:
-    tag: "3.0.4"
+    tag: "3.2.1"
   # used for create-required-objecttypen podiumd job only
   create_required_objecttypen_job:
     enabled: true
@@ -1003,7 +1008,6 @@ objecttypen:
         requests:
           cpu: 10m
           memory: 64Mi
-
 
 openarchiefbeheer:
   enabled: false
@@ -1141,6 +1145,10 @@ openarchiefbeheer:
         requests:
           cpu: 10m
           memory: 20Mi
+    sentinel:
+      enabled: false
+      masterService:
+        enabled: false
 
 openklant:
   configuration:
@@ -1234,7 +1242,7 @@ openklant:
   persistentVolume:
     volumeAttributeShareName: openklant
   image:
-    tag: "2.9.0"
+    tag: "2.12.1"
   resources:
     requests:
       cpu: 100m
@@ -1407,7 +1415,7 @@ openformulieren:
   persistentVolume:
     volumeAttributeShareName: openformulieren
   image:
-    tag: "3.0.8"
+    tag: "3.2.4"
   resources:
     requests:
       cpu: 100m
@@ -1466,7 +1474,9 @@ openinwoner:
     #     - identifier: admin-oidc
     #       enabled: True
     #       oidc_rp_client_id: openinwoner.example.nl
-    #       oidc_rp_client_secret: ${keycloak_client_secret}
+    #       oidc_rp_client_secret:
+    #         value_from:
+    #           env: keycloak_client_secret       
     #       oidc_rp_scopes_list:
     #       - openid
     #       - email
@@ -1503,33 +1513,50 @@ openinwoner:
     #         api_type: zrc
     #         auth_type: zgw
     #         client_id: openinwoner
-    #         secret: ${openzaak_openinwoner_secret}
+    #         secret:
+    #           value_from:
+    #             env: openzaak_openinwoner_secret     
     #       - identifier: documenten-test
     #         label: Open Zaak - Documenten API
     #         api_root: https://openzaak.example.nl/documenten/api/v1/
     #         api_type: drc
     #         auth_type: zgw
     #         client_id: openinwoner
-    #         secret: ${openzaak_openinwoner_secret}
+    #         secret:
+    #           value_from:
+    #             env: openzaak_openinwoner_secret     
     #       - identifier: catalogi-test
     #         label: Open Zaak - Catalogi API
     #         api_root: https://openzaak.example.nl/catalogi/api/v1/
     #         api_type: ztc
     #         auth_type: zgw
     #         client_id: openinwoner
-    #         secret: ${openzaak_openinwoner_secret}
+    #         secret:
+    #           value_from:
+    #             env: openzaak_openinwoner_secret     
     #       - identifier: besluiten-test
     #         label: Open Zaak - Besluiten API
     #         api_root: https://openzaak.example.nl/besluiten/api/v1/
     #         api_type: brc
     #         auth_type: zgw
     #         client_id: openinwoner
-    #         secret: ${openzaak_openinwoner_secret}
+    #         secret:
+    #           value_from:
+    #             env: openzaak_openinwoner_secret     
     #       - identifier: selectielijst
     #         label: Open Zaak (public) - Selectielijst API
     #         api_root: https://selectielijst.openzaak.nl/api/v1/
     #         api_type: orc
     #         auth_type: no_auth
+    #       - identifier: klanten-test
+    #         label: Open klanten API
+    #         api_root: https://openklant.example.nl/klanten/api/v1/
+    #         api_type: kc
+    #         auth_type: zgw
+    #         client_id: openinwoner
+    #         secret:
+    #           value_from:
+    #             env: openklant_openinwoner_token    
     #   openzaak_config_enable: true
     #   openzaak_config:
     #     zaak_max_confidentiality: openbaar
@@ -1575,7 +1602,7 @@ openinwoner:
   persistentVolume:
     volumeAttributeShareName: openinwoner
   image:
-    tag: "1.32.1"
+    tag: "1.34.0"
   resources:
     requests:
       cpu: 200m
