--- a/charts/podiumd/values.yaml
+++ b/charts/podiumd/values.yaml
@@ -2193,11 +2193,13 @@ ita:
     typeVersion: 1
 
   afdeling:
-    type: "REP_ITA_AFDELING_TYPE_REP"
+    uuid: "REP_CONTACT_AFDELING_UUID_REP"
+    type: https://ontw-objecttypen.sschosting.nl/api/v2/objecttypes/{{ .Values.ita.afdeling.uuid }}
     typeVersion: 1
 
   groep:
-    type: "REP_ITA_GROEP_TYPE_REP"
+    uuid: "REP_CONTACT_GROEP_UUID_REP"
+    type: https://ontw-objecttypen.sschosting.nl/api/v2/objecttypes/{{ .Values.ita.groep.uuid }}
     typeVersion: 1
 
   smtp:
