Changes voor podiumd-4.3.0 (#130)
updates for podiumd 4.3.0

see
https://dimpact.atlassian.net/wiki/spaces/PCP/pages/440369159/PodiumD+4.3

don't forget to update
https://dimpact.atlassian.net/wiki/spaces/PCP/pages/499679282/Installatie+en+migratie+irt+4.3.x
when changes are required.

---------

Co-authored-by: Cyril Roos <cyril@niorg.com>
Co-authored-by: Tiho0135 <tihomir@maykinmedia.nl>
Co-authored-by: Bas de Wit <52208549+bas-info-nl@users.noreply.github.com>
Co-authored-by: Pascal van Oostenbrugge <pascal@icatt.nl>
Co-authored-by: PascalIcatt <38104517+PascalIcatt@users.noreply.github.com>

--- a/charts/beproeving/values.yaml
+++ b/charts/beproeving/values.yaml
@@ -1,11 +1,11 @@
 
 zgw-office-addin:
-  enabled: true
+  enabled: false
   fullnameOverride: "zgw-office-addin"
   frontend:
     # ghcr.io/infonl/zgw-office-add-in-frontend:v0.0.205
     image:
-      tag: v0.0.205
+      tag: v0.0.299
     # the public url where manifest.xml and static js files are served
     frontendUrl: http://office-addin.example.com
     # by default this is not needed as it is proxied by the frontend host
@@ -15,7 +15,7 @@ zgw-office-addin:
   backend:
     # ghcr.io/infonl/zgw-office-add-in-backend:
     image:
-      tag: v0.0.205
+      tag: v0.0.299
     # secret used to generate and validate JWT tokens
     jwtSecret: "YOUR_SECRET_KEY"
     # the base url of the openzaak api's
