--- a/charts/podiumd/Chart.yaml
+++ b/charts/podiumd/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: podiumd
 description: PodiumD Helm chart
 type: application
-version: 4.2.2
-appVersion: "4.2.2"
+version: 4.3.0
+appVersion: "4.3.0"
 dependencies:
   - name: keycloak
     version: 24.8.0
@@ -14,46 +14,46 @@ dependencies:
     repository: "@wiremind"
     condition: clamav.enabled
   - name: brp-personen-mock
-    version: 1.2.6
+    version: 1.2.7
     repository: "@dimpact"
     condition: brppersonenmock.enabled
     alias: brppersonenmock
   - name: openzaak
-    version: 1.9.0
+    version: 1.11.0
     repository: "@maykinmedia"
     condition: openzaak.enabled
   - name: opennotificaties
-    version: 1.9.2
+    version: 1.11.1
     repository: "@maykinmedia"
     condition: opennotificaties.enabled
   - name: objecten
-    version: 2.8.1
+    version: 2.9.0
     repository: "@maykinmedia"
     condition: objecten.enabled
   - name: objecttypen
-    version: 1.3.3
+    version: 1.4.0
     repository: "@maykinmedia"
     condition: objecttypen.enabled
   - name: openarchiefbeheer
-    version: 1.3.10
+    version: 1.4.0
     repository: "@maykinmedia"
     condition: openarchiefbeheer.enabled
   - name: openklant
-    version: 1.7.0
+    version: 1.8.0
     repository: "@maykinmedia"
     condition: openklant.enabled
   - name: openforms
     alias: openformulieren
-    version: 1.8.5
+    version: 1.9.0
     repository: "@maykinmedia"
     condition: openformulieren.enabled
   - name: openinwoner
-    version: 1.7.5
+    version: 1.11.0
     repository: "@maykinmedia"
     condition: openinwoner.enabled
   - name: kiss-elastic
     alias: kisselastic
-    version: 1.0.0
+    version: 1.1.0
     repository: "@kiss-elastic"
     condition: kisselastic.enabled
     tags:
@@ -64,9 +64,19 @@ dependencies:
     condition: infinispan.enabled
   - name: zaakafhandelcomponent
     alias: zac
-    version: 1.0.98
+    version: 1.0.116
     repository: "@zac"
     condition: zac.enabled
     tags:
       - zaak
+  - name: zgw-office-addin
+    repository: "@zgw-office-addin"
+    version: 0.0.31
+    condition: zgw-office-addin.enabled
+  - name: internetaakafhandeling
+    alias: ita
+    repository: "oci://ghcr.io/interne-taak-afhandeling"
+    version: 1.0.1
+    condition: ita.enabled
+
 
