--- a/charts/podiumd/templates/keycloak-config-configmap.yaml
+++ b/charts/podiumd/templates/keycloak-config-configmap.yaml
@@ -497,6 +497,31 @@ data:
               access.token.claim: "true"
               claim.name: "client_id"
               jsonType.label: "String"
+      - clientId: ita
+        name: Interne Taak Afhandeling
+        enabled: true
+        clientAuthenticatorType: client-secret
+        redirectUris:
+          - "{{ .Values.ita.web.oidc.frontendUrl }}/*"
+        webOrigins:
+          - "{{ .Values.ita.web.oidc.frontendUrl }}/*"
+        secret: {{ .Values.ita.web.oidc.clientSecret | quote }}
+        protocolMappers:
+          - name: "client roles"
+            protocol: "openid-connect"
+            protocolMapper: "oidc-usermodel-client-role-mapper"
+            consentRequired: false
+            config:
+              introspection.token.claim: "true"
+              multivalued: "true"
+              userinfo.token.claim: "false"
+              id.token.claim: "true"
+              user.attribute: "foo"
+              lightweight.claim: "false"
+              access.token.claim: "true"
+              claim.name: "groups"
+              jsonType.label: "String"
+              usermodel.clientRoleMapping.clientId: "ita"
     clientScopes:
       - name: roles
         description: OpenID Connect scope for add user roles to the access token
@@ -555,11 +580,6 @@ data:
             - "view-users"
           account:
             - "view-groups"
-      - username: "service-account-monitoring"
-        enabled: "true"
-        totp: "false"
-        serviceAccountClientId: "monitoring"
-
     smtpServer:
       starttls: {{ .Values.keycloak.config.smtp.starttls }}
       port: {{ .Values.keycloak.config.smtp.port }}
@@ -604,13 +624,14 @@ data:
           - name: Redacteur
           - name: Klantcontactmedewerker
         zac:
-          - name: zaakafhandelcomponent_user
           - name: behandelaar
           - name: beheerder
           - name: coordinator
           - name: raadpleger
           - name: recordmanager
           - name: domein_elk_zaaktype
+        ita:
+          - name: ITA-Gebruiker
     {{- end }}
     {{- if not .Values.keycloak.config.skipGroups }}
     groups:
@@ -624,7 +645,6 @@ data:
         clientRoles:
           zac:
             - "recordmanager"
-            - "zaakafhandelcomponent_user"
             - "domein_elk_zaaktype"
             - "beheerder"
             - "coordinator"
@@ -632,6 +652,8 @@ data:
             - "behandelaar"
           abc:
             - "administrators"
+          ita:
+            - "ITA-Gebruiker"
           monitoring:
             - "admin"
           objecten:
@@ -656,7 +678,6 @@ data:
         clientRoles:
           zac:
             - "domein_elk_zaaktype"
-            - "zaakafhandelcomponent_user"
             - "behandelaar"
             - "raadpleger"
       - name: coordinators
@@ -666,7 +687,6 @@ data:
             - "Coordinators"
         clientRoles:
           zac:
-            - "zaakafhandelcomponent_user"
             - "domein_elk_zaaktype"
             - "coordinator"
             - "raadpleger"
@@ -678,7 +698,6 @@ data:
             - "Recordmanagers"
         clientRoles:
           zac:
-            - "zaakafhandelcomponent_user"
             - "domein_elk_zaaktype"
             - "coordinator"
             - "behandelaar"
@@ -691,7 +710,6 @@ data:
             - "Beheerders"
         clientRoles:
           zac:
-            - "zaakafhandelcomponent_user"
             - "domein_elk_zaaktype"
             - "coordinator"
             - "behandelaar"
@@ -705,7 +723,6 @@ data:
             - "Raadplegers"
         clientRoles:
           zac:
-            - "zaakafhandelcomponent_user"
             - "domein_elk_zaaktype"
             - "raadpleger"
     {{- end }}
